# fdf121

./: 2draw.c  CMakeLists.txt  LOGLEAK  M  Makefile  README.md  auxs.c  data_get.c  drawer.c  fdf  fdf.c  fdf.h  ffdf  free.c  ft_cw.c  ft_initd.c  ft_rotation.c  libft.h  main.c  make_scr.sh  makefile  map01  map03.fdf  map42  mfd  mff  mlxbi.sh  mymap  press_fdf.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
fdfd/: gdf
mff.dSYM/Contents/: Info.plist
mff.dSYM/Contents/Resources/DWARF/: mff
t_rash/: test_m.c
